--- a/app/views/projects/_ticket.rhtml
+++ b/app/views/projects/_ticket.rhtml
@@ -1,5 +1,6 @@
   <tr>
+    <td><%= link_to ticket.id, project_ticket_path(ticket) %></td>
     <td><%= ticket.status %></td>
-    <td><%= ticket.description %></td>
-    <td><%= ticket.created_on.to_s(:short) %></td>
+    <td><%= link_to ticket.title, project_ticket_path(ticket) %></td>
+    <td><%= time_ago_in_words ticket.created_on %></td>
   </td>
