--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,9 +1,11 @@
 <div id="header">
-  <div id="meta">
+  <div class="meta">
     <% if logged_in? %>
       <%= current_user.username %>
     <% else %>  
       Not logged in
     <% end %>
   </div>
+  
+  <h1><span>gnat</span></h1>
 </div>
