--- a/app/views/tickets/_audit.rhtml
+++ b/app/views/tickets/_audit.rhtml
@@ -1,8 +1,19 @@
-<div class="audit">
-  <%= avatar(audit.user) %>
-  <%= audit.user.login rescue 'Anonymous' %>
-  <div class="description">  
+<div class="audit <%= cycle('audit-odd', '') %>">
+  <div class="header">
+    <%= avatar(audit.user) %>
+    <span class="user"><%= audit.user.login rescue 'Anonymous' %></span>
+    <span class="stamp">
+      <%= resource.created_on.to_s(:long) %>
+    </span>
+  </div>
+  <div class="description">
+    <%= audit_state(audit) %>
+    
+    <%= audit.comments %>
+    
+    
     <% audit.changes.each do |key, values| %>
+      <% next if key == 'status' %>
       <strong><%= key %></strong>
       <p><%= values.inspect %></p>
     <% end %>
