--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -1,9 +1,7 @@
 <% heading do %>
   <%= avatar(resource.user) %>
-  <span class="number">
-    #<%= resource.id %>
-  </span>
-  <%= image_tag 'states/open.png', :class => 'state' %>
+  <span class="number">#<%= resource.id %></span>
+  <%= ticket_state(resource) %>
   <span class="title"><%= resource.title %></span>
   <span class="reported">
     Reported by Chris | <%= resource.created_on.to_s(:long) %>
@@ -16,7 +14,29 @@
   <div class="description">
     <%= simple_format resource.description %>    
   </div>
-  <%= render :partial => 'audit', :collection => resource.audits %>
+
+  <%= render :partial => 'audit', :collection => resource.audits.reverse %>
+  
+  <div class="ticket-actions">
+    <h3>Submit comment</h3>
+    
+    <% form_for_resource do |form| %>
+      <%= form.label :comments %>
+      <%= form.text_area :comments, :rows => 15 %>
+      
+      <% if current_user.developer? %>
+      <p>
+        <%= form.radio_button :status, 'open', :id => 'status-open' %> 
+          <label for="status-open">accept and assign to </label>
+          <select><option>me (scharfie)</option></select>
+        <%= form.radio_button :status, 'invalid', :id => 'status-invalid' %> <label for="status-invalid">mark invalid</label>
+        <%= form.radio_button :status, 'resolved', :id => 'status-resolved' %> <label for="status-resolved">mark resolved</label>
+      </p>
+      <% end %>
+      <p><%= submit_tag 'Submit comment' %></p>
+    <% end %>
+  </div>  
+  
 </div>
       
 
