--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -20,6 +20,8 @@
       <% if current_project %>
       <li><%= link_to 'Tickets', project_tickets_path(current_project) %></li>
       <% end %>
+      
+      <li class="all"><%= link_to 'All tickets' %>
     </ul>  
   </div>  
 </div>
