--- a/app/views/tickets/_audit.rhtml
+++ b/app/views/tickets/_audit.rhtml
@@ -1,3 +1,4 @@
+<% if audit.version > 1 %>
 <div class="audit <%= cycle('audit-odd', '') %>">
   <div class="header">
     <%= avatar(audit.user) %>
@@ -19,3 +20,4 @@
     <% end %>
   </div>  
 </div>
+<% end %>
