--- a/app/views/tickets/_ticket.rhtml
+++ b/app/views/tickets/_ticket.rhtml
@@ -1,6 +1,6 @@
-  <tr>
-    <td><%= link_to ticket.id, resource_path(ticket) %></td>
-    <td><%= ticket.status %></td>
+  <tr class="<%= cycle('odd', '') %>">
+    <td class="number"><%= ticket.id %></td>
+    <td class="status"><%= ticket_state(ticket) %></td>
     <td><%= link_to ticket.title, resource_path(ticket) %></td>
-    <td><%= time_ago_in_words ticket.created_on %></td>
+    <td class="stamp"><%= time_ago_in_words ticket.created_on %></td>
   </td>
