Styled the audit changes

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -21,7 +21,7 @@
       <li><%= link_to 'Tickets', project_tickets_path(current_project) %></li>
       <% end %>
       
-      <li class="all"><%= link_to 'All tickets' %>
+      <li class="all"><%= link_to 'All tickets', tickets_path %>
     </ul>  
   </div>  
 </div>
