--- a/app/views/tickets/_audit.rhtml
+++ b/app/views/tickets/_audit.rhtml
@@ -13,7 +13,7 @@
     <%= audit.comments %>
     
     <% audit.changes.each do |key, values| %>
-      <% next if key == 'status' %>
+      <% next if %w(status milestone_id assigned_to_id).include?(key) %>
       <strong><%= key %></strong>
       <p><%= values.inspect %></p>
     <% end %>
