Working on slate skin

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,6 +1,6 @@
 <% heading 'Projects' %>
 
-<dl>
+<dl id="projects">
   <% for project in resources %>
   <dt><%= link_to(project.name, project) %></dt>
   <dd><%= project.description %></dd>
