--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
   <title>gnat</title>
   <%= javascript_include_tag :defaults %>
-  <%= stylesheet_link_tag 'reset', 'base' %>
+  <%= stylesheet_link_tag 'reset', 'base', 'slate' %>
   <%= yield :head %>
 </head>
 <body>
