--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -5,7 +5,7 @@
     <tr>
       <th class="number">#</th>
       <th class="total" colspan="2"><%= pluralize resources.length, 'ticket' %></th>
-      <th class="assigned_to">Assigned to</th>
+      <th class="assigned_to"><nobr>Assigned to</nobr></th>
       <th class="milestone">Milestone</th>
       <th class="stamp">Age</th>
     </tr>
