--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,7 +3,7 @@
     <% if logged_in? %>
       <%= current_user.username %>
     <% else %>  
-      Not logged in
+      <%= link_to 'Sign in', login_url %>
     <% end %>
   </div>
   
