--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -1,6 +1,6 @@
 <% heading span(enclosing_resource ? enclosing_resource.name : 'All') + ' tickets' %>
 
-<table class="tickets">
+<table class="data tickets">
   <thead>
     <tr>
       <th class="number">#</th>
