--- a/app/views/users/new.rhtml
+++ b/app/views/users/new.rhtml
@@ -1,16 +1,19 @@
+<% head stylesheet_link_tag('simple') %>
+
+<% heading link_to('Sign in', login_url) + span(' or ') + 'Register' %>
+
+
 <%= error_messages_for :user %>
 <% form_for :user, :url => users_path do |f| -%>
-<p><label for="login">Login</label><br/>
-<%= f.text_field :login %></p>
+  <% f.options.merge! :default_template => 'row', :label_append => ':' %>
+  <table class="form">
+  <%= f.text_field :login %></p>
+  <%= f.text_field :email %></p>
+  <%= f.password_field :password %></p>
+  <%= f.password_field :password_confirmation, :label => 'Confirm' %></p>
+  </table>
 
-<p><label for="email">Email</label><br/>
-<%= f.text_field :email %></p>
-
-<p><label for="password">Password</label><br/>
-<%= f.password_field :password %></p>
-
-<p><label for="password_confirmation">Confirm Password</label><br/>
-<%= f.password_field :password_confirmation %></p>
-
-<p><%= submit_tag 'Sign up' %></p>
+  <% f.actions do %>
+    <%= submit_tag 'Register' %>
+  <% end %>  
 <% end -%>
