--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -26,7 +26,7 @@
   <div class="ticket-actions">
     <h3>Submit comment</h3>
     
-    <% form_for_resource do |form| %>
+    <% form_for_resource :builder => ActionView::Helpers::FormBuilder do |form| %>
       <%= textile_editor :ticket, :comments, :rows => 15 %>
       
       <p>
