Cleaned up new ticket form

--- a/app/views/tickets/_form.rhtml
+++ b/app/views/tickets/_form.rhtml
@@ -12,4 +12,4 @@
     <%= submit_tag 'Save' %>
   </div>
 
-  <% head textile_editor_initialize %>
+  <% head textile_editor_initialize(:framework => :jquery) %>
