--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,7 +1,7 @@
 <% heading 'Projects' %>
 
 <div id="toolbar">
-  <%= link_to glyph('brick', 'Create new project'), new_project_path if current_user.super_user? %>
+  <%= link_to glyph('brick', 'Create new project'), new_project_path if (current_user != :false && current_user.super_user?) %>
 </div>
 
 <table class="data projects">
