Added eztime Added 'to me' when assigning a ticket to a developer

--- a/app/views/tickets/_audit.rhtml
+++ b/app/views/tickets/_audit.rhtml
@@ -4,7 +4,7 @@
     <%= avatar(audit.user, :badge => false) %>
     <span class="user"><%= audit.user.login rescue 'Anonymous' %></span>
     <span class="stamp">
-      <%= resource.created_on.to_s(:long) %>
+      <%= format_time resource.created_on %>
     </span>
   </div>
   <div class="description">
