--- a/app/views/tickets/_form.rhtml
+++ b/app/views/tickets/_form.rhtml
@@ -13,6 +13,12 @@
     <%= form.text_field :estimate, :style => 'width: 20%' %>
   </p>
 
+  <p>
+    <%= form.label :due_on %><br />
+    <%= form.date_select :due_on %>
+  </p>
+
+
   <div class="actions">
     <%= submit_tag 'Save' %>
   </div>
