Added 'today' function when selecting due date

--- a/app/views/tickets/_form.rhtml
+++ b/app/views/tickets/_form.rhtml
@@ -15,7 +15,7 @@
 
   <p>
     <%= form.label :due_on %><br />
-    <%= form.date_select :due_on %>
+    <%= form.date_select :due_on, :include_blank => true %>
   </p>
 
 
